--- a/css/styles.css
+++ b/css/styles.css
@@ -8,10 +8,14 @@
 
 }
 
+html {
+    height: 100%;
+}
+
 body {
     display: flex;
     font-family: Arial, sans-serif;
-    height: 100vh;
+    height: 100%;
     background: linear-gradient(to bottom,rgba(0, 133, 138, 0.568), rgba(0, 220, 228, 0.568));
     align-items: center;
 
@@ -82,6 +86,7 @@ main {
     border-radius: 20px;
     background: linear-gradient(to bottom,rgba(0, 61, 63, 0.568),rgba(0, 133, 138, 0.568));
     width: 100%;
+    height: 100%;
     
 }
 
@@ -122,18 +127,17 @@ main {
 .bt-send-message {
     font-family: "Handjet";
     background-color: black;
-    font-size: 1.5em;
     text-decoration: none;
     border-style: solid;
-    color: rgb(255, 196, 0);;
+    color: rgb(255, 196, 0);
     border-color: rgb(252, 71, 0);
     border-width: 1px;
     border-radius: 50%;
     text-align: center;
     justify-content: center;
-    width: 8%;
+    width: 10%;
     aspect-ratio: 1 / 1;
-    font-size: 1.6em;
+    font-size: 2em;
 }
 
 .bt-send-message:hover {
@@ -144,8 +148,7 @@ main {
 .msg-screen {
     background-color: aliceblue;
     width: 95%;
-    min-height: 65%;
-    max-height: 30vh;
+    height: 50%;
     border-color: rgba(0, 0, 0, 0.726);
     border-style: solid;
     border-width: 2px;
@@ -211,4 +214,53 @@ main {
     font-size: 1em;
     font-weight: 700;
     text-align: left;
+}
+
+.keyboard-container {
+    width: 100%;
+  }
+  
+.keyboard {
+    width: 95%;
+    display: inline-block;
+  }
+  
+.keyboard-row {
+    display: flex;
+    justify-content: center;
+  }
+  
+.key {
+
+    font-size: 17px;
+    padding: 6px 10px 6px 10px;
+    margin: 1px;
+    cursor: pointer;
+    background-color: #eee;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 10%;
+  }
+  
+.key:active {
+    background-color: #ccc;
+  }
+  
+#spaceKey {
+    width: 50%;
+  }
+  
+#deleteKey {
+    width: 20%;
+    background-color: #f66;
+    padding: 2px 10px 2px 10px;
+
+  }
+  
+#deleteKey:active {
+    background-color: #d33;
+  }
+
+button {
+    touch-action: none;
 }
