--- a/templates/implodechatclient.html
+++ b/templates/implodechatclient.html
@@ -92,7 +92,7 @@
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script type="module" src="../scripts/implodechat.js"></script>
+    <script type="module" src="../scripts/implodechatclient.js"></script>
     <script type="module" src="../scripts/implodebd.js"></script>
 
 </body>
