link com parametro/novos headers

--- a/templates/implodechatclient.html
+++ b/templates/implodechatclient.html
@@ -13,10 +13,9 @@
 <body>
     <div class="body-content">
         <main>
-            <header>
-                <a href="" class="bt-menu-header">Chat</a>
-                <a href="implodechatclient.html" class="bt-menu-header">I'm invited</a>
-                <a href="" class="bt-menu-header">About</a>
+            <header class="header-client">
+                <a href="" class="bt-menu-header">NEW CHAT</a>
+                <a href="" class="bt-menu-header">ABOUT</a>
             </header>
             <div type="text" class="msg-screen" id="all-messages">
          
