--- a/css/styles.css
+++ b/css/styles.css
@@ -50,16 +50,21 @@ header, main {
 
 }
 
-header {
+.header-chat {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 5px;
-
-
     margin-top: 10px;
     width: 96%;
 }
 
+.header-client {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+    margin-top: 10px;
+    width: 96%;
+}
 .bt-menu-header {
     font-family: "Permanent Marker";
     font-weight: 400;
@@ -149,6 +154,8 @@ main {
     background-color: aliceblue;
     width: 95%;
     height: 50%;
+    max-width: 100vw; 
+    overflow-x: hidden; 
     border-color: rgba(0, 0, 0, 0.726);
     border-style: solid;
     border-width: 2px;
@@ -157,6 +164,8 @@ main {
     margin-bottom: 0px;
     padding: 8px;
     overflow: auto; 
+    align-content: flex-end;
+    text-align: -webkit-right;
 }
 
 #bt-copy {
@@ -191,7 +200,7 @@ main {
 
 .msg-on-screen {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.2em;
+    font-size: 0.8em;
     display: flex;
     border-style: solid;
     border-width: 1px;
