--- a/templates/implodechat.html
+++ b/templates/implodechat.html
@@ -3,9 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,  user-scalable=no">
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <title>ImplodeChat!</title>
@@ -13,17 +10,17 @@
 <body>
     <div class="body-content">
         <main>
-            <header>
-                <a href="" class="bt-menu-header">Chat</a>
-                <a href="implodechatclient.html" class="bt-menu-header">I'm invited</a>
-                <a href="" class="bt-menu-header">About</a>
+            <header class="header-chat">
+                <button href="" class="bt-menu-header">NEW CHAT</button>
+                <button href="" id="copy-link" class="bt-menu-header">COPY LINK</button>
+                <button href="" class="bt-menu-header">About</button>
             </header>
             <div type="text" class="msg-screen" id="all-messages">
          
             </div>
             <div class="footer">2024 - ti0aly - ImplodeChat</div>
             <div class="send-bar">
-            <textarea class="type-msg" type="text" id="my-msg" placeholder="..." autofocus autocomplete="off" spellcheck="true" readonly></textarea>
+            <textarea class="type-msg" type="text" id="my-msg" placeholder='CLICK ON "COPY LINK" BUTTON' autofocus autocomplete="off" spellcheck="true" readonly></textarea>
             <a type="button" class="bt-send-message" id="send-msg" >></a>
             </div>
             <div class="keyboard-container">
@@ -91,7 +88,7 @@
         </main>
 
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="../scripts/implodechat.js"></script>
     <script type="module" src="../scripts/implodebd.js"></script>
 
