contagem de conexoes

--- a/templates/implodechat.html
+++ b/templates/implodechat.html
@@ -18,7 +18,7 @@
             <div type="text" class="msg-screen" id="all-messages">
          
             </div>
-            <div class="footer">2024 - ti0aly - ImplodeChat</div>
+            <div class="footer" id="status-connection">2024 - ti0aly - ImplodeChat</div>
             <div class="send-bar">
             <textarea class="type-msg" type="text" id="my-msg" placeholder='CLICK ON "COPY LINK" BUTTON' autofocus autocomplete="off" spellcheck="true" readonly></textarea>
             <a type="button" class="bt-send-message" id="send-msg" >></a>
