--- a/templates/implodechatclient.html
+++ b/templates/implodechatclient.html
@@ -14,13 +14,13 @@
     <div class="body-content">
         <main>
             <header class="header-client">
-                <a href="" class="bt-menu-header">NEW CHAT</a>
-                <a href="" class="bt-menu-header">ABOUT</a>
+                <button href="" class="bt-menu-header">NEW CHAT</button>
+                <button href="" class="bt-menu-header">ABOUT</button>
             </header>
             <div type="text" class="msg-screen" id="all-messages">
          
             </div>
-            <div class="footer">2024 - ti0aly - ImplodeChat</div>
+            <div class="footer" id="status-connection">2024 - ti0aly - ImplodeChat</div>
             <div class="send-bar">
             <textarea class="type-msg" type="text" id="my-msg" placeholder="..." autofocus autocomplete="off" spellcheck="true" readonly></textarea>
             <a type="button" class="bt-send-message" id="send-msg" >></a>
