--- a/templates/implodechat.html
+++ b/templates/implodechat.html
@@ -15,7 +15,7 @@
                 <button href="" id="copy-link" class="bt-menu-header">COPY LINK</button>
                 <button href="" class="bt-menu-header">About</button>
             </header>
-            <div type="text" class="msg-screen" id="all-messages">
+            <div type="text" class="msg-screen" id="all-messages" placeholder="you can adjust this display">
          
             </div>
             <div class="footer" id="status-connection">2024 - ti0aly - ImplodeChat</div>
