--- a/css/styles.css
+++ b/css/styles.css
@@ -40,13 +40,13 @@ h1 {
     gap: 2px;
     font-family: Arial, sans-serif;
     height: 98%;
-    width: 98%;
+    width: 100%;
 
 }
 
 header, main {
     min-width: 300px;
-    max-width: 500px;
+    max-width: 700px;
 
 }
 
@@ -54,8 +54,7 @@ header, main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 5px;
-    margin-top: 10px;
-    width: 96%;
+    width: 99%;
 }
 
 .header-client {
@@ -63,7 +62,7 @@ header, main {
     grid-template-columns: repeat(2, 1fr);
     gap: 5px;
     margin-top: 10px;
-    width: 96%;
+    width: 99%;
 }
 .bt-menu-header {
     font-family: "Permanent Marker";
@@ -89,7 +88,7 @@ main {
     flex-direction: column;
     text-align: center;
     border-radius: 20px;
-    background: linear-gradient(to bottom,rgba(0, 61, 63, 0.568),rgba(0, 133, 138, 0.568));
+    background-color: none;
     width: 100%;
     height: 100%;
     
@@ -152,20 +151,21 @@ main {
 
 .msg-screen {
     background-color: aliceblue;
-    width: 95%;
-    height: 50%;
+    width: 99%;
+    height: 40%;
     max-width: 100vw; 
     overflow-x: hidden; 
     border-color: rgba(0, 0, 0, 0.726);
     border-style: solid;
     border-width: 2px;
     border-radius: 15px;
-    margin-top: 2%;
+    margin-top: 1%;
     margin-bottom: 0px;
     padding: 8px;
     overflow: auto; 
     align-content: flex-end;
     text-align: -webkit-right;
+    resize: vertical;
 }
 
 #bt-copy {
@@ -173,7 +173,7 @@ main {
 }
 
 .send-bar {
-    width: 92%;
+    width: 99%;
     display: flex;
     flex-direction: line;
     border-color: rgba(0, 0, 0, 0.726);
@@ -187,7 +187,7 @@ main {
 .type-msg {
     width: 92%;
     border-style: none;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .type-msg:focus {
@@ -200,7 +200,7 @@ main {
 
 .msg-on-screen {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.8em;
+    font-size: 14px;
     display: flex;
     border-style: solid;
     border-width: 1px;
@@ -232,6 +232,9 @@ main {
 .keyboard {
     width: 100%;
     display: inline-block;
+    position: fixed;
+    bottom: 0;
+    left: 0;
   }
   
 .keyboard-row {
@@ -242,7 +245,7 @@ main {
 .key {
 
     font-size: 17px;
-    padding: 6px 10px 6px 10px;
+    padding: 10px 10px 10px 10px;
     margin: 1px;
     cursor: pointer;
     background-color: #eee;
@@ -252,7 +255,7 @@ main {
   }
   
 .key:active {
-    background-color: #ccc;
+    background-color: #4094c5;
   }
   
 #spaceKey {
@@ -267,7 +270,7 @@ main {
   }
   
 #deleteKey:active {
-    background-color: #d33;
+    background-color: rgb(0, 0, 0);
   }
 
 button {
