--- a/templates/implodechat.html
+++ b/templates/implodechat.html
@@ -13,7 +13,7 @@
             <header class="header-chat">
                 <button href="" class="bt-menu-header">NEW CHAT</button>
                 <button href="" id="copy-link" class="bt-menu-header">COPY LINK</button>
-                <button href="" class="bt-menu-header">About</button>
+                <button href="" id="delete-chat" class="bt-menu-header">DELETE CHAT</button>
             </header>
             <div type="text" class="msg-screen" id="all-messages" placeholder="you can adjust this display">
          
