na lida pra melhorar experiencia ao abrir teclado

--- a/templates/implodechat.html
+++ b/templates/implodechat.html
@@ -20,71 +20,9 @@
             </div>
             <div class="footer" id="status-connection">2024 - ti0aly - ImplodeChat</div>
             <div class="send-bar">
-            <textarea class="type-msg" type="text" id="my-msg" placeholder='CLICK ON "COPY LINK" BUTTON' autofocus autocomplete="off" spellcheck="true" readonly></textarea>
+            <textarea class="type-msg" type="text" id="my-msg" placeholder='CLICK ON "COPY LINK" BUTTON' autofocus autocomplete="off" spellcheck="true"></textarea>
             <a type="button" class="bt-send-message" id="send-msg" >></a>
             </div>
-            <div class="keyboard-container">
-                <div id="keyboard" class="keyboard">
-                  <div class="keyboard-row">
-                    <button class="key">1</button>
-                    <button class="key">2</button>
-                    <button class="key">3</button>
-                    <button class="key">4</button>
-                    <button class="key">5</button>
-                    <button class="key">6</button>
-                    <button class="key">7</button>
-                    <button class="key">8</button>
-                    <button class="key">9</button>
-                    <button class="key">0</button>
-                  </div>
-                  <!-- Fila 2 -->
-                  <div class="keyboard-row">
-                    <button class="key">q</button>
-                    <button class="key">w</button>
-                    <button class="key">e</button>
-                    <button class="key">r</button>
-                    <button class="key">t</button>
-                    <button class="key">y</button>
-                    <button class="key">u</button>
-                    <button class="key">i</button>
-                    <button class="key">o</button>
-                    <button class="key">p</button>
-                  </div>
-                  <!-- Fila 3 -->
-                  <div class="keyboard-row">
-                    <button class="key">a</button>
-                    <button class="key">s</button>
-                    <button class="key">d</button>
-                    <button class="key">f</button>
-                    <button class="key">g</button>
-                    <button class="key">h</button>
-                    <button class="key">j</button>
-                    <button class="key">k</button>
-                    <button class="key">l</button>
-                  </div>
-                  <!-- Fila 4 -->
-                  <div class="keyboard-row">
-                    <button class="key" id="caps-lock">⇪</button>
-                    <button class="key">z</button>
-                    <button class="key">x</button>
-                    <button class="key">c</button>
-                    <button class="key">v</button>
-                    <button class="key">b</button>
-                    <button class="key">n</button>
-                    <button class="key">m</button>
-                    <button class="key" id="deleteKey">DEL</button>
-                  </div>
-                  <!-- Espaço -->
-                  <div class="keyboard-row">
-                    <button class="key">!</button>
-                    <button class="key">.</button>
-                    <button class="key" id="spaceKey">ESP</button>
-                    <button class="key">,</button>
-                    <button class="key">?</button>
-                  </div>
-                </div>
-              </div>
-
         </main>
 
     </div>
