--- a/css/styles.css
+++ b/css/styles.css
@@ -8,16 +8,15 @@
 
 }
 
-html {
-    height: 100%;
-}
-
 body {
-    display: flex;
     font-family: Arial, sans-serif;
-    height: 100%;
-    background: linear-gradient(to bottom,rgba(0, 133, 138, 0.568), rgba(0, 220, 228, 0.568));
     align-items: center;
+    overflow: hidden;
+    overflow-y: hidden;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
 
 }
 
@@ -39,15 +38,12 @@ h1 {
     flex-direction: column;
     gap: 2px;
     font-family: Arial, sans-serif;
-    height: 98%;
-    width: 100%;
-
+    height: 60vh;
 }
 
 header, main {
     min-width: 300px;
     max-width: 700px;
-
 }
 
 .header-chat {
@@ -59,17 +55,21 @@ header, main {
 
 .header-client {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 5px;
-    margin-top: 10px;
     width: 99%;
 }
+
+header {
+    margin-top: 5px;
+}
+
 .bt-menu-header {
     font-family: "Permanent Marker";
     font-weight: 400;
     font-style: normal;
     color: black;
-    background: linear-gradient(to bottom,rgba(123, 206, 209, 0.849),rgba(73, 201, 206, 0.568));
+    background: linear-gradient(to bottom,rgba(65, 114, 116, 0.849),rgba(73, 201, 206, 0.568));
     text-align: center;
     align-content: center;
     width: 100%;
@@ -80,17 +80,15 @@ header, main {
 }
 
 .bt-menu-header:hover {
-    background: linear-gradient(to bottom,rgba(150, 251, 255, 0.849),rgba(90, 249, 255, 0.568));
+    background: linear-gradient(to bottom,rgba(104, 176, 179, 0.849),rgba(90, 249, 255, 0.568));
 }
 
 main {
     display: flex;
     flex-direction: column;
     text-align: center;
-    border-radius: 20px;
-    background-color: none;
+    border-radius: 15px;
     width: 100%;
-    height: 100%;
     
 }
 
@@ -139,9 +137,9 @@ main {
     border-radius: 50%;
     text-align: center;
     justify-content: center;
-    width: 10%;
-    aspect-ratio: 1 / 1;
-    font-size: 2em;
+    width: 30px;
+    height: 30px;
+    font-size: 24px;
 }
 
 .bt-send-message:hover {
@@ -149,10 +147,14 @@ main {
     cursor: pointer;
 }
 
+#index-main {
+    background: linear-gradient(to bottom,rgba(0, 133, 138, 0.568), rgba(0, 220, 228, 0.568));
+}
 .msg-screen {
-    background-color: aliceblue;
+    background: linear-gradient(to bottom,rgba(0, 133, 138, 0.568), rgba(0, 220, 228, 0.568));
     width: 99%;
-    height: 40%;
+    min-height: 25vh;
+    max-height: 50vh;
     max-width: 100vw; 
     overflow-x: hidden; 
     border-color: rgba(0, 0, 0, 0.726);
@@ -179,12 +181,13 @@ main {
     border-color: rgba(0, 0, 0, 0.726);
     border-style: solid;
     border-width: 2px;    
-    background-color: white;
-    border-radius: 20px;
+    background-color: rgba(73, 201, 206, 0.568);
+    border-radius: 15px;
     padding: 6px;
 }
 
 .type-msg {
+    background-color: rgba(255, 255, 255, 0);
     width: 92%;
     border-style: none;
     font-size: 14px;
@@ -241,54 +244,7 @@ main {
     text-align: left;
 }
 
-.keyboard-container {
-    width: 100%;
-  }
-  
-.keyboard {
-    width: 100%;
-    display: inline-block;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-  }
-  
-.keyboard-row {
-    display: flex;
-    justify-content: center;
-  }
-  
-.key {
-
-    font-size: 17px;
-    padding: 10px 10px 10px 10px;
-    margin: 1px;
-    cursor: pointer;
-    background-color: #eee;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    width: 10%;
-  }
-  
-.key:active {
-    background-color: #4094c5;
-  }
-  
-#spaceKey {
-    width: 50%;
-  }
-  
-#deleteKey {
-    width: 20%;
-    background-color: #f66;
-    padding: 2px 10px 2px 10px;
-
-  }
-  
-#deleteKey:active {
-    background-color: rgb(0, 0, 0);
-  }
-
 button {
     touch-action: none;
 }
+
