--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <title>ImplodeChat!</title>
 </head>
 <body>
@@ -13,11 +13,11 @@
             <header>
             </header>
             <h1 class="page-title">Implode Chat!</h1>
-            <a type="button" class="bt-action-main" href="templates/implodechat.html">&#128293start now&#128293</a>
+            <a type="button" class="bt-action-main" href="implodechat.html">&#128293start now&#128293</a>
             <div class="footer">2024 - ti0aly - ImplodeChat</div>
         </main>
 
     </div>
-    <script src="scripts/index.js"></script>
+    <script src="../scripts/index.js"></script>
 </body>
 </html>
